# greeter

./: .gitignore  README.md  build.gradle.kts
.github/workflows/: build.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src-rust/: Cargo.toml
src-rust/.cargo/: config.toml
src-rust/migrations/: 20250627000000_create_player_greets.sql
src-rust/src/: config.rs  db.rs  error.rs  lib.rs
src/main/java/me/fortibrine/greeter/: GreetCommand.java  GreeterPlugin.java  PlayerJoinListener.java  RustBridge.java
src/main/resources/: config.yml  plugin.yml
