[package]
name = "greeter_jni"
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.22.4"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
