[package]
name = "greeter_jni"
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.22.4"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.28"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "mysql", "any"] }
sea-query = "1.0"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
